--- a/package.json
+++ b/package.json
@@ -15,11 +15,23 @@
     "runnable": true,
     "supportedBrands": [
       "phet",
-      "adapted-from-phet"
+      "adapted-from-phet",
+      "phet-io"
+    ],
+    "phetLibs": [
+      "projectile-data-lab"
     ],
     "supportsOutputJS": true,
     "simFeatures": {
-      "supportsDynamicLocale": true
+      "supportsDynamicLocale": true,
+      "supportsInteractiveDescription": true,
+      "supportsSound": true
+    },
+    "screenNameKeys": [
+      "PROJECTILE_SAMPLING_DISTRIBUTIONS/screen.sampling"
+    ],
+    "phet-io": {
+      "compareDesignedAPIChanges": true
     }
   },
   "eslintConfig": {
@@ -37,6 +49,14 @@
               "ts-ignore": true,
               "ts-check": true,
               "ts-nocheck": true
+            }
+          ],
+          "additional-bad-text": [
+            "error",
+            {
+              "forbiddenTextObjects": [
+                "dispose"
+              ]
             }
           ]
         }
