--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     ],
     "phet-io": {
       "compareDesignedAPIChanges": true
-    }
+    },
+    "published": true
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js",
