add bamboo https://github.com/phetsims/chipper/issues/957
Signed-off-by: Michael Kauzmann <michael.kauzmann@colorado.edu>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "phet-io"
     ],
     "phetLibs": [
-      "projectile-data-lab"
+      "projectile-data-lab",
+      "bamboo"
     ],
     "supportsOutputJS": true,
     "simFeatures": {
