Convert tsconfig to use project references, see https://github.com/phetsims/chipper/issues/1356

--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
               ]
             }
           ]
+        },
+        "parserOptions": {
+          "project": [
+            "../projectile-sampling-distributions/tsconfig.json"
+          ]
         }
       }
     ]
