add fuzzValuesOverride and opt out of 4 repos, https://github.com/phetsims/phet-io/issues/2002

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ],
     "phet-io": {
       "compareDesignedAPIChanges": true,
+      "fuzzValuesOverride": false,
       "wrappers": [
         "phet-io-sim-specific/repos/projectile-sampling-distributions/wrappers/codap"
       ]
