--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
       "supportsSound": true
     },
     "phet-io": {
+      "wrappers": [
+        "phet-io-sim-specific/repos/projectile-sampling-distributions/wrappers/codap"
+      ],
+      "publicWrappers": [
+        "codap"
+      ],
       "compareDesignedAPIChanges": true
     }
   },
