--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "projectile-sampling-distributions",
-  "version": "1.0.7-rc.5",
+  "version": "1.0.7",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
