--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "codap"
       ],
       "compareDesignedAPIChanges": true
-    }
+    },
+    "published": true
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js",
